--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "pinia": "^2.0.21",
+    "sass": "^1.55.0",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
@@ -23,8 +24,10 @@
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "node-sass": "^7.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
+    "sass-loader": "^13.0.2",
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
     "vue-tsc": "^0.40.7"
