--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     "eslint-plugin-vue": "^9.3.0",
     "node-sass": "^7.0.3",
     "npm-run-all": "^4.1.5",
+    "postcss-html": "^1.5.0",
     "prettier": "^2.7.1",
     "sass-loader": "^13.0.2",
+    "stylelint-config-prettier-scss": "^0.0.1",
+    "stylelint-config-standard-scss": "^5.0.0",
+    "stylelint-config-standard-vue": "^1.0.0",
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
-    "vue-tsc": "^0.40.7"
+    "vue-tsc": "^1.0.7"
   }
 }
