--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "pinia": "^2.0.21",
     "sass": "^1.55.0",
+    "swiper": "^8.4.4",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
